# P.Mill

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_STATUS.md  GETTING_STARTED.md  HANDOFF.md  LANGUAGE_DETECTION.md  LICENSE  README.md  ROADMAP.md  SESSION_SUMMARY.md  START_HERE.md  TECHSPEC.md  pyproject.toml
backend/: __init__.py  cli.py  config.py  main.py
backend/analysis/: __init__.py  ast_parser.py  cfg.py  complexity.py  complexity_hotspots.py  contracts.py  coupling.py  dependency.py  fact_extractor.py  invariants.py  language_detector.py  llm_contracts.py  logic_critic.py  maintainability_critic.py  pattern_checker.py  patterns.py  performance_critic.py  security_boundaries.py  security_critic.py  unified_analyzer.py
backend/llm/: __init__.py  adapter.py  cerebras_adapter.py  prompts.py  response_parser.py
backend/models/: __init__.py  schemas.py
backend/parsing/: __init__.py  report_exporter.py  visualization.py
backend/pipeline/: __init__.py  analyzer.py  cross_validator.py  report_generator.py
backend/synthesis/: __init__.py  fix_generator.py  refactoring_suggester.py  test_generator.py
tests/: __init__.py  conftest.py  test_ast_parser.py  test_basic.py  test_cfg.py  test_complexity.py  test_complexity_hotspots.py  test_contracts.py  test_coupling.py  test_cross_validator.py  test_dependency.py  test_fact_extractor.py  test_fix_generator.py  test_invariants.py  test_language_detector.py  test_llm_adapter.py  test_llm_contracts.py  test_logic_critic.py  test_maintainability_critic.py  test_null_safety_check.py  test_pattern_checker.py  test_patterns.py  test_performance_critic.py  test_pipeline_integration.py  test_refactoring_suggester.py  test_report_exporter.py  test_security_boundaries.py  test_security_critic.py  test_test_generator.py  test_unified_analyzer.py  test_visualization.py
